@@ -136,7 +136,8 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${FREETYPE_INCLUDE_DIRS}
 
 add_library(soccer MODULE ${soccer_LIB_SRCS} ${soccer_LIB_HDRS})
 
-target_link_libraries(soccer ${spark_libs} ${OPENGL_gl_LIBRARY})
+target_link_libraries(soccer ${spark_libs} ${OPENGL_gl_LIBRARY}
+  ${Boost_LIBRARIES})
 
 if (NOT APPLE)
    set_target_properties(soccer PROPERTIES VERSION 1.1.0 SOVERSION 1)
