@@ -24,7 +24,8 @@ include_directories(${CMAKE_SOURCE_DIR}/plugin ${FREETYPE_INCLUDE_DIRS}
 add_library(soccermonitor MODULE ${soccermonitor_LIB_SRCS}
    ${soccermonitor_LIB_HDRS})
 
-target_link_libraries(soccermonitor ${spark_libs} ${OPENGL_LIBRARIES})
+target_link_libraries(soccermonitor ${spark_libs} ${OPENGL_LIBRARIES}
+  ${Boost_LIBRARIES})
 
 if (NOT APPLE)
    set_target_properties(soccermonitor PROPERTIES VERSION 1.0.0 SOVERSION 1)
